리눅스 명령어

--- a/깃 시작하기01.md
+++ b/깃 시작하기01.md
@@ -34,6 +34,18 @@
   $ ls
   이름 뒤에 슬래시가 붙어 있는 것은 디렉토리 이다
 
-4. ls 명령 뒤에 -l 옵션을 붙이면 파일이나 디렉토리의 상세 정보까지 표시 가능. -l 옵션에서 알파벳 소문자 대신 대문자 사용 가능
+4. ls 명령 뒤에 -l 옵션을 붙이면 파일이나 디렉토리의 상세 정보까지 표시 가능. -l 옵션에서 알파벳 소문자 대신 대문자 사용 가능 
+
+  $ ls -l
+
+### ls 명령 옵션 모음
+
+  |옵션|설명|
+  |---|---|
+  | -a | 숨긴 파일이나 디렉토리도 함께 표시 |
+  | -l | 파일이나 디렉토리의 상세 정보 함께 표시 |
+  | -r | 파일의 정렬 순서를 거꾸로 표시합니다. |
+  | -t | 파일 작성 시간순으로 (내림차순) 표시합니다. |
+
 
 
