--- a/01. 깃시작하기/깃 시작하기01.md
+++ b/01. 깃시작하기/깃 시작하기01.md
@@ -17,9 +17,11 @@
 
     깃에서 사용자 정보를 설정하려면 git config명령을 사용합니다. 여기에 --global 옵션을 추가하면 현재 컴퓨터에 있는 모든 저장소에서 같은 사용자 정보를 사용하도록 설정합니다.
 
+```bash
     $ git config --global user.name "이름"
 
     $ git config --global user.email "메일 주소"
+```
 
 ## 01-3 리눅스 명령 연습하기
 - 현재 디렉토리 살펴보기
@@ -28,15 +30,21 @@
   디렉토리 윈도우 탐색기의 폴더와 같음
 
 2. pwd 명령은 현재 위치의 경로가 나타난다
-  $pwd
+```bash
+  $ pwd
+```
 
 3. 현재 디렉토리에 어떤 파일이나 디렉토리가 있늕 확인할 때는 ls 명령 사용
+``` bash
   $ ls
+```
   이름 뒤에 슬래시가 붙어 있는 것은 디렉토리 이다
 
 4. ls 명령 뒤에 -l 옵션을 붙이면 파일이나 디렉토리의 상세 정보까지 표시 가능. -l 옵션에서 알파벳 소문자 대신 대문자 사용 가능 
 
+``` bash
   $ ls -l
+```
 
 ### ls 명령 옵션 모음
 
@@ -48,4 +56,56 @@
   | -t | 파일 작성 시간순으로 (내림차순) 표시합니다. |
 
 
+**터미널 창 지우기**
+  
+  터미널에 여러 소스를 입력하다 보면 
 
+
+**터미널 창에서 디렉토리 이동하기**
+1. 터미널 창에서 깃을 사용한다면 디렉토리 사이를 바로 이동하는 경우가 많다. 터미널 창에서 디렉토리 상를 이동할 때는 'cd'라는 명령어 사용
+먼저 현재 위치에서 상위 디레게토리로 이동해본다
+
+``` bash
+$ cd..
+```
+
+- cd 명령 다음에 한 칸 띄고 마침표 2개를 입력
+
+2. cd 명령을 실행한 후 $ 기호 위에 표시된 경로 확인
+3. 하위 디렉토리로 이동할 때는 cd 명령 다음에 이동할 하위 디렉토리 이름 입력
+- 예를 들어 현재 c/ 디렉토리에 있고 c/Users 디렉토리로 가려면 다음과 같이 명령 입력
+``` bash
+$ cd Users
+```
+
+4. 홈 디렉토리로 돌아가려면 ~ 입력. ~는 홈 디렉토리를 나타낸다
+``` bash 
+$ cd ~ 
+```
+
+** 리눅스에서 디렉토리를 나타내는 기호 **
+
+기호|설명
+---|---
+~|현재 접속 중인 사용자 디렉토리를 가리킴
+.|현재 사용자 작업 중인 디렉토리
+..|현재 디렉토리의 상위 디렉토리
+
+### 터미널 창에서 디렉토리 만들기 및 삭제하기
+1. 터미널 창에서 현재 디렉토리 안에 하위 디렉토리를 만들 때는 'mkdir'이라는 명령어 사용
+- 예를 들어 홈 디렉토리 안에 있는 Documents 디렉토리에 test 라는 하위 디렉토리를 만든다면 다음과 같이 작성
+
+``` bash
+$ cd Documents
+$ mkdir test
+```
+
+2. 디렉토리 삭제할 때는 'rm'이라는 명령을 사용한다. 단, 명심할 것은 삭제할 디렉토리의 상위 디렉토리에서 해야함
+- r 옵션을 붙이면 하위 디렉토리와 파일 모두 함께 삭제 가능
+
+``` bash
+$ rm -r test
+```
+
+** 터미널 종료하기 **
+- 터미널 창을 닫을 때 창의 오른쪽 위에 있는 X를 클릭해도 되지만. 터미널 창에 exit 명령 입력하여 닫을 수 있음
