--- a/02. 깃으로 버전 관리하기/02-1. 깃 저장소 만들기.md
+++ b/02. 깃으로 버전 관리하기/02-1. 깃 저장소 만들기.md
@@ -1,26 +1,33 @@
 # 02-1 깃 저장소 만들기
 - 깃으로 버전 관리를 하려면 폴더 안에 버전이 저장되는 공간이 필요한데 이것을 저장소(repository)라고 합니다.
 
-1. 깃 저장소를 만들기 전에 새로운 디렉터리를 만들겠습니다.
+1. 깃 저장소를 만들기 전에 새로운 디렉토리를 만들겠습니다.
 ```bash
 $ mkdir hello-git
 $ cd hello-git
 ```
 2. 안의 내용을 살펴보기 위해 ls -la 명령을 사용한다. -l, -a 함께 붙여서 사용 가능하다.
-3. (.) 항목은 현재 디렉터리를 나타내고, 마침표가 2개인 항목은 (..)은 상위 디렉터리를 나타냅니다.
-4. 이 디렉터리에 저장소를 만들기 위해 터미널에 git init라고 입력합니다. 현재 디렉터리에서 깃을 사용할 수 있도록 초기화하는 것입니다.
+3. (.) 항목은 현재 디렉토리를 나타내고, 마침표가 2개인 항목은 (..)은 상위 디렉토리를 나타냅니다.
+4. 이 디렉토리에 저장소를 만들기 위해 터미널에 git init라고 입력합니다. 현재 디렉토리에서 깃을 사용할 수 있도록 초기화하는 것입니다.
 ```bash
 $ git init
 ```
 5. 이제부터 hello-git에서 깃을 사용할 수 있습니다.
-6. 디렉터리 안의 내용을 확인해 보면 .git이라는 디렉터리가 생겼을 겁니다. 이 폴더는 깃을 사용하면서 버전이 저장될 '저장소(repository)`입니다.
+6. 디렉토리 안의 내용을 확인해 보면. git이라는 디렉토리가 생겼을 겁니다. 이 폴더는 깃을 사용하면서 버전이 저장될 '저장소(repository)`입니다.
 
 # 02-2 버전 만들기
 - 프로그램 개발에서는 수정 내용이 쌓이면 새로 번호를 붙여서 이전 상태와 구별합니다. 이렇게 번호 등을 통해 구별하는 것을 버전이라고 합니다.
 - 깃에서도 문서를 수정할 때마다 버전을 만들면서 이전 상태와 구별합니다.
 
 **깃에서 버전이란**
-- 깃에서 버전이란 문서를 수정하고 저장할 때마다 생기는 것이라고 생각하면 쉽습니다.
+- 깃에서 버전이란 문서를 수정하고 저장할 때마다 생기는 것으로 생각하면 쉽습니다.
 - 훨씬 쉽게 버전을 만들고, 또한 버전을 만든 시간과 수정 내용까지 기록할 수 있는 것이 바로 깃과 같은 버전 관리 시스템입니다. 깃에서 버전을 관리하면 원래 파일 이름은 그대로 유지하면서 파일에서 무엇을 변경했는지를 변경 시점마다 저장할 수 있습니다. 또 버전마다 작업한 내용을 확인할 수 있고, 그 버전으로 되돌릴 수도 있습니다.
 
 **스테이지와 커밋 이해하기**
+- 작업 트리
+ - 작업 트리는 파일 수정, 저장 등의 작업을 하는 디렉토리입니다. 예를 들어 hello-git 디렉토리가 작업 트리입니다.
+- 스테이지
+ - 스테이지는 버전으로 만들 파일이 대기하는 곳입니다. 스테이징 영역이라고도 합니다.
+- 저장소
+ - 저장소, 즉 리퍼지토리는 스테이지에서 대기하고 있던 파일들을 버전으로 만들어 저장하는 곳입니다. 스테이지와 저장소는. git 디렉토리 안에 숨은 파일 형태로 존재한다.
+ - hello.txt 파일 문서를 수정하고 저장하면 그 파일은 작업 트리에 있게 됩니다. 그리고 수정한 hello.txt 파일을 스테이지에 넣습니다. 다른 파일도 수정한 뒤 스테이지에 넣어 둡니다. 파일 수정을 끝내고 스테이지에 다 넣었다면 버전을 만들기 위해 깃에서 '커밋(commit)` 명령을 내립니다. 그러면 새로운 버전이 생성되면서 스테이지에 대기하던 파일이 모두 저장소에 저장됩니다.
