--- a/02. 깃으로 버전 관리하기/02-1. 깃 저장소 만들기.md
+++ b/02. 깃으로 버전 관리하기/02-1. 깃 저장소 만들기.md
@@ -15,7 +15,7 @@ $ git init
 5. 이제부터 hello-git에서 깃을 사용할 수 있습니다.
 6. 디렉토리 안의 내용을 확인해 보면. git이라는 디렉토리가 생겼을 겁니다. 이 폴더는 깃을 사용하면서 버전이 저장될 '저장소(repository)`입니다.
 
-# 02-2 버전 만들기
+# 02-2. 버전 만들기
 - 프로그램 개발에서는 수정 내용이 쌓이면 새로 번호를 붙여서 이전 상태와 구별합니다. 이렇게 번호 등을 통해 구별하는 것을 버전이라고 합니다.
 - 깃에서도 문서를 수정할 때마다 버전을 만들면서 이전 상태와 구별합니다.
 
