--- a/02. 깃으로 버전 관리하기/02-4. 버전마다 파일 상태.md
+++ b/02. 깃으로 버전 관리하기/02-4. 버전마다 파일 상태.md
@@ -1,5 +1,4 @@
-***02-4 버전 마다 파일 상태.md***
-# 🏄‍♂️02-4 버전 만드는 단계마다 파일 상태 알아보기
+# 🏄‍♂️02-4. 버전 만드는 단계마다 파일 상태 알아보기
 - 깃에서는 버전을 만드는 단계마다 파일 상태가 달라집니다. 그래서 파일 상태를 이해하면 이 파일이 버전 관리의 여러 단계 중 어디에 해당하는지, 그 상태에서 어떤 일을 할 수 있는지 알 수 있습니다.
 
 **🔎tracked 파일과 untracked파일**
@@ -48,8 +47,16 @@ $ vim .gitignore
 5. git add 명령을 사용해 스테이지에 올리고 git status명령을 실행해 보세요.'Changes to be committed:'라는 메시지가 나타나면 커밋 직전 단계, 즉 staged상태입니다.
 6. 스테이지에 있는 hello2.txt 파일을 커밋하세요. 그리고 git status 명령을 실행합니다.
 ```
-git commit -m "delete b,c,d"
+$ git commit -m "delete b,c,d"
 ```
 7. 커밋을 끝내고 나면 hello2.txt 파일의 상태는 수정하기 직전인 unmodified 상태로 돌아 갑니다.
 
 8. untreaked > unmodified > modified > staged 파일의 상태 변화는 위와 같이 정리 된다.
+
+- 방금 커밋한 메시지 수정하기
+  - 가장 최근 메시지를 수정하려면 --amend 옵션을 사용
+
+``` bash
+$ git commit --amend
+```
+
