--- a/04. 깃허브 시작하기/04-4. 동기화하기.md
+++ b/04. 깃허브 시작하기/04-4. 동기화하기.md
@@ -27,5 +27,22 @@ $ git push
 
 **🛵원격 저장소에서 직접 커밋하기**
  - 원격 저장소에 접속해서 커밋을 만들면 지역 저장소에 없기 때문에 원격 저장소에서 지역 저장소로 가져와서 동기화해야 합니다.
- 
+
  1. 원격 저장소에 새로운 파일을 추가해 보겠습니다.
+
+ **🛵원격 저장소에서 커밋 내려받기 - git pull**
+  - 원격 저장소에 있는 소스 파일을 다른 사용자가 수정하거나 깃허브 사이트에서 직접 커밋하면 지역 저장소와 버전 차이가 생깁니다. 이럴 때는 원격 저장소와 지역 저장소의 상태를 같게 만들기 위해 원격 저장소의 커밋을 지역 저장소로 가져옵니다. 이것을 '풀(pull)한다'고 합니다.
+
+  1. 원격 저장소에서 커밋을 풀한다.
+  ```
+  $ git pull origin main
+  $ git pull
+  ```
+  2. git log로 커밋을 확인한다. origin/main은 원격 저장소의 최신 커밋이라는 뜻입니다.
+
+**🛵깃 허브 원격 저장소 화면 살펴보기**
+ - watch : 저장소에 대한 알림을 받는 사용자의 수를 표시합니다.
+ - fork : 현재 저장소를 자신의 계정으로 복제한 사용자의 수를 표시합니다.
+ - star: 현재 저장소를 즐겨찾기에 추가한 사용자의 수를 표시합니다.
+ - 태그 : 커밋에 설명을 붙여서 목록으로 저장
+ - 릴리즈 : 깃허브를 통해 소프트웨어를 제공한다면 릴리즈 버전과 패키지를 만들어 그 내용을 나열합니다.
